// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditForm> renders a form with the "Change password" button 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="firstname"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            First Name
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="aaa90954-4830-44b0-bbc0-7e0bfa3ec862"
              name="firstname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="lastname"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Last Name
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="61abc71f-c44d-4e61-8df4-b554a8a7a12a"
              name="lastname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="email"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Email address
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="2822255b-608e-46d2-ba77-a5565c6fad68"
              name="email"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="password"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Password
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 1;"
        >
          <span
            class="input"
          >
            <input
              autocomplete="current-password"
              class="input"
              id="313a3754-4728-4577-a0ec-10ab2843263c"
              name="password"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          >
            <button
              type="button"
            >
              <span
                class="content"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                  />
                  <line
                    x1="1"
                    x2="23"
                    y1="1"
                    y2="23"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="changePasswordButtonContainer"
    >
      <button
        class="changePasswordButton"
        classes="[object Object]"
        type="button"
      >
        <span>
          Change Password
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<EditForm> renders a form without the "Change password" button 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="firstname"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            First Name
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="b49ec3a1-d522-4797-bef6-3d15c645aacc"
              name="firstname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="lastname"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Last Name
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="3c05d978-e2f9-443d-a146-a366c5bae65d"
              name="lastname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="email"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Email address
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="bfa3758c-4fa6-426b-9344-487d55186c7c"
              name="email"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="password"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Current Password
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 1;"
        >
          <span
            class="input"
          >
            <input
              autocomplete="current-password"
              class="input"
              id="9319cdef-2dcb-476e-9a67-112cc52b4b89"
              name="password"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          >
            <button
              type="button"
            >
              <span
                class="content"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                  />
                  <line
                    x1="1"
                    x2="23"
                    y1="1"
                    y2="23"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          class="root"
        />
      </div>
    </div>
  </div>
  <div
    class="newPassword"
  >
    <div
      class="root"
    >
      <label>
        <span
          class="label"
        >
          New Password
        </span>
      </label>
      <span
        class="root"
        style="--iconsBefore: 0; --iconsAfter: 1;"
      >
        <span
          class="input"
        >
          <input
            class="input"
            id="8b9fd8cd-56c6-4cce-afcc-0a96f3cc7018"
            name="newPassword"
            type="password"
            value=""
          />
        </span>
        <span
          class="before"
        />
        <span
          class="after"
        >
          <button
            type="button"
          >
            <span
              class="content"
            >
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                />
                <line
                  x1="1"
                  x2="23"
                  y1="1"
                  y2="23"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <p
        class="root"
      />
    </div>
  </div>
</DocumentFragment>
`;
